# ai-econ-impact

./: .gitignore  README.md  pyproject.toml
.cursor/notes/: session-log.md
.cursor/notes/decisions/: 0001-tooling-and-structure.md  0002-pin-python-3.12.md  0003-kickoff-structural-task-role-aggregator.md  0004-gated-resourcing-model.md  TEMPLATE.md
.cursor/notes/sessions/: 2026-06-12-bootstrap.md  2026-06-12-uv-environment.md  (+5 more)
.cursor/rules/: data-eda.mdc  git-commit-hygiene.mdc  papers-research-notes.mdc  project-overview.mdc  session-logging.mdc  simulations.mdc
diagrams/: workstream-a-scope-decision-tree.drawio
notes/concepts/: automation-forecasting.md  productivity.md  task-to-role-aggregation.md
notes/papers/: acemoglu-2025-simple-macroeconomics-ai.md  acemoglu-restrepo-2019-automation-new-tasks.md  autor-thompson-2025-expertise.md  gans-goldfarb-2026-o-ring-automation.md  hampole-2025-ai-labor-market.md  luo-2026-bayesian-ai-automation.md  openai-2026-ai-jobs-transition-framework.md  svanberg-2024-beyond-ai-exposure.md
notion/Fellowship-35/: Ana 372296bcfe38801e9cc4e1eb3ab7b745.md  Harnesses deep dive 380296bcfe3880948622ff84d3e26040.md  Ken 367296bcfe3880639f10f74e8364f0f8.md  Scoring strategy 382296bcfe38804187f0d782ea640030.md  Untitled 367296bcfe388072beb9e57615ec2e7e.csv  Untitled 367296bcfe388072beb9e57615ec2e7e_all.csv  Yveta 367296bcfe3880f6868ae4ef739747ba.md  tool_call_error_messages.csv
project-management/: feasibility.md  workstream-a-structural-task-role-aggregator.html  workstream-a-structural-task-role-aggregator.md
src/: paths.py
(+21 files in other folders)
